# wgpu-3dgs-vr-viewer-app

./: Cargo.toml  GITHUB_PAGES_部署指南.md  LICENSE-APACHE  README.md  VR_DYNAMIC_IPD.md  VR_EYE_SWAP_FIX.md  VR_FINAL_CORRECTION.md  VR_FINAL_FIX.md  VR_GPU_BUFFER_FIX.md  VR_IMPLEMENTATION_SUMMARY.md  VR_MODE_IMPLEMENTATION.md  VR_PARALLAX_SLIDER.md  VR_STEREO_FIX.md  index.html  rust-toolchain  sw.js  wgpu-3dgs-viewer-app.js
.github/workflows/: deploy.yml  pages.yml  rust.yml
src/: app.rs  lib.rs  main.rs  util.rs
src/renderer/: measurement.rs  mod.rs
src/shader/: measurement.wgsl
src/tab/: camera.rs  mask.rs  measurement.rs  metadata.rs  mod.rs  models.rs  scene.rs  selection.rs  transform.rs
