[package]
name = "wgpu-3dgs-viewer-app"
version = "0.1.0"
authors = ["Lio Qing"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { version = "0.31", features = ["serde"] }
egui_dock = { version = "0.16", features = ["serde"] }
egui_extras = "0.31"
egui-modal = "0.6.0"
log = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
itertools = "0.14.0"
rfd = "0.15.2"
wgpu-3dgs-viewer = { version = "0.2.0", features = [
    "query-toolset",
    "query-texture-overlay",
    "query-cursor",
    "multi-model",
    "mask-gizmo",
] }
bytemuck = "1.21.0"
oneshot = "0.1.9"
paste = "1.0.15"
num-format = "0.4.4"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
chrono = "0.4.40"
nom = "8.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
futures = "0.3.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend.
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend.
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
